# product-definition-lobster-army

./: .gitignore  README.md  README_CN.md  agents.py  config.yaml  lobster-army-blueprint.html  lobster-system-report.docx  pyproject.toml  requirements.txt  state.py
app/: app.py
app/.streamlit/: config.toml
app/history/: 20260331_142621_EyeCare_Companion.json
app/prompts/anchor/: system.txt
app/prompts/lobster_1/: system.txt
app/prompts/lobster_2/: system.txt
app/prompts/lobster_3/: system.txt
app/prompts/lobster_4/: system.txt
app/prompts/lobster_5/: system.txt
lobster-army/: README.md  README_CN.md  agents.py  compression.py  config.yaml  flow.py  gate_check.py  main.py
lobster-army/prompts/anchor/: system_en.txt
lobster-army/prompts/lobster_2/: system.txt
lobster-army/prompts/lobster_3/: system.txt  system_en.txt
lobster-army/prompts/lobster_4/: system.txt
lobster-army/prompts/lobster_5/: system_en.txt
lobster-army/schemas/: anchor.json  summary_l1.json  summary_l2.json
prompts/lobster_2/: system_en.txt
prompts/lobster_5/: system.txt
runs/: lobster_1_output.json  lobster_2_output.json  lobster_3_output.json  lobster_4_output.json  lobster_5_output.json  state.json
src/lobster_army/: __init__.py  __main__.py  agents.py  compression.py  flow.py  gate_check.py  main.py
src/lobster_army/crews/: __init__.py
src/lobster_army/prompts/lobster_1/: system.txt  system_en.txt
src/lobster_army/prompts/lobster_4/: system_en.txt
src/lobster_army/schemas/: combined_summary.json
src/lobster_army/tools/: __init__.py
