[project]
name = "lobster-army"
version = "2.0.0"
description = "Multi-Agent Product Analysis System — 5 specialized AI lobsters deliver industrial-grade product analysis"
authors = [
    { name = "Sharon Zhang", email = "zsr.coco@gmail.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai[tools]>=1.10",
    "anthropic>=0.49",
    "jsonschema>=4.20",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/SrZhang4160/product-definition-lobster-army"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lobster_army"]

[tool.crewai]
type = "flow"
